--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.6",
+    "@react-navigation/drawer": "^5.12.2",
     "@react-navigation/native": "^5.9.1",
     "@react-navigation/stack": "^5.14.0",
     "@reduxjs/toolkit": "^1.5.0",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -21,6 +26,7 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
+    "react-navigation-header-buttons": "^6.0.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
@@ -29,6 +35,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
     "typescript": "~4.0.0"
   },
   "private": true
